fix nginx template

--- a/deploy_tools/nginx.template.conf
+++ b/deploy_tools/nginx.template.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name sitename;
+    server_name SITENAME;
 
     location /static {
         alias /home/elspeth/sites/SITENAME/static;
